"FIxing size of images on small screens"

--- a/static/css/new.css
+++ b/static/css/new.css
@@ -115,7 +115,7 @@ nav a {
 
 .main-gallery img {
 	width: 400px;
-	height: 280px;
+	height: 220px;
 }
 
 
